WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 112542
[Qt][WK1] REGRESSION(
r145973
): http/tests/appcache/local-content.html fails
https://bugs.webkit.org/show_bug.cgi?id=112542
Summary
[Qt][WK1] REGRESSION(r145973): http/tests/appcache/local-content.html fails
Zoltan Arvai
Reported
2013-03-18 01:42:26 PDT
Since
r145973
test failes n Qt WK1: --- /ramdisk/qt-linux-64-release/build/layout-test-results/http/tests/appcache/local-content-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/http/tests/appcache/local-content-actual.txt @@ -1,7 +1,6 @@ -CONSOLE MESSAGE: Not allowed to load local resource: stdio.h Test that documents loaded from application cache don't get access to local resources accidentally. Should say SUCCESS: -SUCCESS +FAILURE: A local resource was opened in an iframe
Attachments
patch
(5.16 KB, patch)
2013-03-27 14:52 PDT
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Arvai
Comment 1
2013-03-18 06:06:25 PDT
Skipped in
http://trac.webkit.org/changeset/146042
on Qt WK1. Please unskip it with the proper fix.
Nate Chapin
Comment 2
2013-03-22 12:17:08 PDT
(In reply to
comment #1
)
> Skipped in
http://trac.webkit.org/changeset/146042
on Qt WK1. > Please unskip it with the proper fix.
Is there any possibility this was caused by another patch? It's certainly possible it was
r145973
, but I'm not immediately seeing how this could have affected local load reporting for a non-redirected iframe.
Zoltan Arvai
Comment 3
2013-03-25 03:39:05 PDT
(In reply to
comment #2
)
> (In reply to
comment #1
) > > Skipped in
http://trac.webkit.org/changeset/146042
on Qt WK1. > > Please unskip it with the proper fix. > > Is there any possibility this was caused by another patch? It's certainly possible it was
r145973
, but I'm not immediately seeing how this could have affected local load reporting for a non-redirected iframe.
The other patches seems not to be related to this issue: Before:
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r145971%20%2849207%29/results.html
After:
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r145974%20%2849208%29/results.html
Trac range:
http://trac.webkit.org/log/trunk?rev=145974&stop_rev=145970&limit=4&verbose=on
Zoltan Arvai
Comment 4
2013-03-25 03:44:49 PDT
Also found similar results on other bot:
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20NRWT/r145971%20%2830339%29/results.html
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20NRWT/r145973%20%2830340%29/results.html
Nate Chapin
Comment 5
2013-03-27 14:52:48 PDT
Created
attachment 195400
[details]
patch
WebKit Review Bot
Comment 6
2013-03-28 14:56:36 PDT
Comment on
attachment 195400
[details]
patch Clearing flags on attachment: 195400 Committed
r147165
: <
http://trac.webkit.org/changeset/147165
>
WebKit Review Bot
Comment 7
2013-03-28 14:56:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug