Source/WebCore: Don't grant local content permissions for appcache loads. https://bugs.webkit.org/show_bug.cgi?id=112542

Reviewed by Antti Koivisto.

No new tests, fixing http/tests/appcache/local-content.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::DocumentLoader):
(WebCore::DocumentLoader::commitData): Don't grant local load permissions
    to all SubstituteData loads, only give them to loads that were SubstituteData
    loads at the time of DocumentLoader construction. This constitutes all
    SubstituteData loads except those triggered by appcache.
* loader/DocumentLoader.h:
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::didBeginDocument): Move granting local load
    permissions for SubstituteData loads to DocumentLoader::commitData().

LayoutTests: Remove expected failure for https://bugs.webkit.org/show_bug.cgi?id=112542

Reviewed by Antti Koivisto.

* platform/qt-5.0-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/131887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147165 268f45cc-cd09-0410-ab3c-d52691b4dbfc