Source/WebCore/loader/DocumentLoader.h
@@ -343,6 +343,7 @@ namespace WebCore {
     
         ResourceError m_mainDocumentError;    
 
+        bool m_originalSubstituteDataWasValid;
         bool m_committed;
         bool m_isStopping;
         bool m_gotFirstByte;
